--- a/Web.config
+++ b/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ItemContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=Narcosis101;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+      <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Narcosis101-20130603030321.mdf;Initial Catalog=aspnet-Narcosis101-20130603030321;Integrated Security=True" providerName="System.Data.SqlClient" />
+      <add name="ItemContext"
+   connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Items.mdf;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
 </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
